--- a/Starbucks_selenium_crawler.ipynb
+++ b/Starbucks_selenium_crawler.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Starbucks_Korea Crawler using Selenium"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -47,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 스타벅스 상점명 크롤링"
+    "## chromedriver + selenium 을 사용한 크롤링"
    ]
   },
   {
