--- a/Starbucks_selenium_crawler.ipynb
+++ b/Starbucks_selenium_crawler.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -97,13 +97,13 @@
        " '세종']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 스타벅스 홈페이지 내에서 \n",
+    "# 스타벅스 홈페이지 내에서 전체 시 이름을 리스트에 담아줍니다\n",
     "location_search = driver.find_element_by_class_name('loca_search')\n",
     "location_search.click()\n",
     "sleep(5)\n",
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test코드(수정 요망)\n",
+    "# while문을 돌면서 각 지역별 스타벅스 지점명과 주소 크롤링\n",
     "i = 0\n",
     "while i < len(city_name_list)-1:\n",
     "    # 지역선택 클릭하기\n",
@@ -226,6 +226,81 @@
     "\n",
     "# csv파일로 저장\n",
     "df_Sejong.to_csv(\"C:/dataitgirls/starbucks_세종.csv\", header=True, index=True, encoding='euc-kr')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### #3 하나의 코드로 합치기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# while문을 돌면서 각 지역별 스타벅스 지점명과 주소 크롤링 - 세종시 포함\n",
+    "i = 0\n",
+    "while i < len(city_name_list):\n",
+    "    # 지역선택 클릭하기\n",
+    "    location_search = driver.find_element_by_class_name('loca_search')\n",
+    "    location_search.click()\n",
+    "    sleep(5)\n",
+    "    \n",
+    "    # 시 선택\n",
+    "    city= driver.find_element_by_class_name('sido_arae_box')\n",
+    "    city_li = city.find_elements_by_tag_name('li')\n",
+    "    city_li[i].click()\n",
+    "    sleep(5)\n",
+    "    \n",
+    "    # 세종시가 구/군에 해당하는 정보를 가지고 있는지 없는지를 판별\n",
+    "    is_Sejong = [ el.text for el in driver.find_elements_by_xpath(\"//*[@id='container']/div/form/fieldset/div/section/article[1]/article/article[2]/div[2]\")]\n",
+    "\n",
+    "\n",
+    "    # 세종시일때 (구/군 선택 X)\n",
+    "    if len(is_Sejong[0]) == 0:\n",
+    "        pass\n",
+    "    \n",
+    "    # 세종시가 아닌 시일때 (구/군 선택 O)\n",
+    "    else:\n",
+    "        #구군에서 '전체' 선택하도록 하기\n",
+    "        gugun = driver.find_element_by_class_name('gugun_arae_box')\n",
+    "        gu_li = gugun.find_element_by_tag_name('li')\n",
+    "        gu_li.click()\n",
+    "        sleep(5)\n",
+    "        \n",
+    "    source = driver.page_source\n",
+    "    bs = bs4.BeautifulSoup(source,'lxml')\n",
+    "    entire = bs.find('ul', class_='quickSearchResultBoxSidoGugun')\n",
+    "    li_list = entire.find_all('li')\n",
+    "\n",
+    "    name_list = []\n",
+    "    address_list = []\n",
+    "\n",
+    "    # DT점명 가져오기\n",
+    "    for name in li_list:\n",
+    "        name_list.append(name.find('strong').text)\n",
+    "\n",
+    "    # DT주소 가져오기\n",
+    "    for address in li_list:\n",
+    "        address_list.append(address.find('p').text)\n",
+    "\n",
+    "\n",
+    "    # csv파일 저장하기 - path, filename 설정(지역별로 파일명 상이)\n",
+    "    path = \"C:/dataitgirls/\" #저장하고 싶은 경로 앞부분 \n",
+    "    full_path = path + 'starbucks_' + city_name_list[i] +'.csv' #현재 경로 + 파일명\n",
+    "\n",
+    "    df = pd.DataFrame({'name':name_list, 'address':address_list})\n",
+    "\n",
+    "    # 'address' 칼럼에 전화번호 제거\n",
+    "    df['address'] = df['address'].str.replace(r'\\d{2,3}-\\d{3,4}-\\d{4}', '')\n",
+    "\n",
+    "    # csv파일로 저장\n",
+    "    df.to_csv(full_path, header=True, index=True, encoding='euc-kr')\n",
+    "    \n",
+    "    i = i+1"
    ]
   }
  ],
